--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "node",
   "version": "1.0.0",
   "main": "index.js",
+  "module": "commonjs",
   "license": "MIT",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
